--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ material = "1.6.8"
 materialIconsExtended = "1.6.8"
 navigationCompose = "2.7.7"
 onesignal = "4.8.9"
+playServicesAds = "23.6.0"
 timber = "5.0.1"
 
 [libraries]
@@ -64,6 +65,7 @@ hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", ve
 junit = { module = "junit:junit", version.ref = "junit" }
 kotlinx-coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlinxCoroutinesPlayServices" }
 onesignal = { module = "com.onesignal:OneSignal", version.ref = "onesignal" }
+play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
 [plugins]
