--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,9 +21,15 @@ lifecycleRuntimeKtx = "2.8.2"
 material = "1.6.8"
 materialIconsExtended = "1.6.8"
 navigationCompose = "2.7.7"
-onesignal = "[4.0.0, 4.99.99]"
+onesignal = "[5.0.0, 5.99.99]"
 playServicesAds = "23.6.0"
 timber = "5.0.1"
+volley = "1.2.1"
+retrofit = "2.0.0-beta2"
+converterGson = "2.0.0-beta2"
+retrofitVersion = "2.11.0"
+converterGsonVersion = "2.11.0"
+okhttp = "5.0.0-alpha.14"
 
 [libraries]
 accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanistSystemuicontroller" }
@@ -67,6 +73,12 @@ kotlinx-coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-cor
 onesignal = { module = "com.onesignal:OneSignal", version.ref = "onesignal" }
 play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+volley = { module = "com.android.volley:volley", version.ref = "volley" }
+retrofit = { group = "com.squareup.retrofit", name = "retrofit", version.ref = "retrofit" }
+converter-gson = { group = "com.squareup.retrofit", name = "converter-gson", version.ref = "converterGson" }
+retrofit2-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitVersion" }
+retrofit2-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converterGsonVersion" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version = "4.12.0" }
 
 [plugins]
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
